syntax = "proto3";

package main;

option go_package = "./proto";


message DeptAddReq {
  int64 parentDeptId = 1;
  string deptName = 2;
  int32 sort = 3;
  string leader = 4;
  string phone = 5;
  string email = 6;
  int32 status = 7;
}

message DeptAddResp {

}

message DeptUpdateReq {
  int64 deptId = 1;
  int64 parentDeptId = 2;
  string deptName = 3;
  int32 sort = 4;
  string leader = 5;
  string phone = 6;
  string email = 7;
  int32 status = 8;
}

message DeptUpdateResp {

}

message DeptDeleteReq {
  int64 deptId = 1;
}

message DeptDeleteResp {

}

message DeptInfoReq {
  int64 deptId = 1;
}

message DeptInfoResp {
  int64 deptId = 1;
  int64 parentDeptId = 2;
  string deptName = 3;
  int32 sort = 4;
  string leader = 5;
  string phone = 6;
  string email = 7;
  int32 status = 8;
  string createTime = 9;
}

message DeptListReq {

}

message DeptListData {
  int64 deptId = 1;
  int64 parentDeptId = 2;
  string deptName = 3;
  int32 sort = 4;
  string leader = 5;
  string phone = 6;
  string email = 7;
  int32 status = 8;
  string createTime = 9;
}

message DeptListResp {
  repeated DeptListData data = 1;
}

service DeptService {
  rpc DeptAdd(DeptAddReq) returns (DeptAddResp);
  rpc DeptUpdate(DeptUpdateReq) returns (DeptUpdateResp);
  rpc DeptDelete(DeptDeleteReq) returns (DeptDeleteResp);
  rpc DeptInfo(DeptInfoReq) returns (DeptInfoResp);
  rpc DeptList(DeptListReq) returns (DeptListResp);
}

