syntax = "proto3";

package main;

option go_package = "./proto";


// 添加菜单信息表
message AddMenuReq {
  string background_url = 1; //接口地址
  string create_by = 2; //创建者
  string vue_redirect = 3; //vue的路由重定向
  string vue_icon = 4; //vue的图标
  string vue_path = 5; //vue系统的path
  string menu_icon = 6; //菜单图标
  string menu_name = 7; //菜单名称
  string menu_path = 8; //前端路由
  string menu_perms = 9; //权限标识
  int32 menu_sort = 10; //菜单排序
  int32 menu_status = 11; //菜单状态
  int32 menu_type = 12; //类型 0：目录,1：菜单,2：按钮,3：外链
  int64 parent_id = 13; //父菜单ID，一级菜单为0
  string remark = 14; //备注信息
  string vue_component = 15; //vue的页面
  int32 is_visible = 16; //是否可见  0：否  1：是
}

message AddMenuResp {
}

service MenuService {
  rpc AddMenu(AddMenuReq) returns(AddMenuResp);
}

