syntax = "proto3";

package sysclient;

option go_package = "./sysclient";


message LoginReq {
  string username = 1;
  string password = 2;
}

message loginResp {
  int64 id = 1;
  string AccessToken = 2;
}

service UserService {
  // 用户登录
  rpc Login(LoginReq) returns(loginResp);
}